--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,7 @@
 	    <pathelement location="lib/log4j-api-2.2.jar" />
 	    <pathelement location="lib/log4j-core-2.2.jar" />
 	    <pathelement location="lib/guava-18.0.jar" />
+	    <pathelement location="lib/json-simple-1.1.1.jar" />
     </path>
 
     <target name="compile" depends="clean">
