--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src/main"/>
+	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -14,5 +15,7 @@
 	<classpathentry kind="lib" path="lib/pvDataJava-5.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/pbrawclient-0.0.5.jar"/>
 	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/test/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/test/junit-4.11.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
